--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <html>
+    <head>
+        <link rel="stylesheet" href="style.css"
+    </head>
 <body>
+<br><br><br><br>
 <h1>Bom dia rapaziada</h1>
 
 </body>
