--- a/index.html
+++ b/index.html
@@ -1,10 +1,22 @@
-<html>
-    <head>
-        <link rel="stylesheet" href="style.css"
-    </head>
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login IFAL</title>
+</head>
 <body>
-<br><br><br><br>
-<h1>Bom dia rapaziada</h1>
-
+    <main>
+    <form>
+        <h1>Login IFAL</h1>
+        <div class="input-box">
+        <input placeholder="Usuário" type="email">
+        
+        </div>
+        <div class="input-box">
+        <input placeholder="Senha" type="password"
+        </div>
+    </form>
+    </main>
 </body>
 </html>
