--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
+    <script src="https://kit.fontawesome.com/d206dc50a3.js" crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login IFAL</title>
@@ -11,10 +12,11 @@
         <h1>Login IFAL</h1>
         <div class="input-box">
         <input placeholder="Usuário" type="email">
-        
+        <i class="fa-solid fa-user"></i>
         </div>
         <div class="input-box">
-        <input placeholder="Senha" type="password"
+        <input placeholder="Senha" type="password">
+        <i class="fa-solid fa-lock"></i>
         </div>
     </form>
     </main>
