--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <script src="https://kit.fontawesome.com/d206dc50a3.js" crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css"
     <title>Login IFAL</title>
 </head>
 <body>
@@ -11,13 +12,21 @@
     <form>
         <h1>Login IFAL</h1>
         <div class="input-box">
-        <input placeholder="Usuário" type="email">
-        <i class="fa-solid fa-user"></i>
+            <input placeholder="Usuário" type="email">
+            <i class="fa-solid fa-user"></i>
         </div>
-        <div class="input-box">
-        <input placeholder="Senha" type="password">
-        <i class="fa-solid fa-lock"></i>
+            <div class="input-box">
+            <input placeholder="Senha" type="password">
+            <i class="fa-solid fa-lock"></i>
         </div>
+        <div>
+            <label class="remember-forgot">
+            <input type="checkbox">
+            Lembre de mim
+            </label>
+            <a href="#">Esqueci minha senha</a>
+        </div>
+        <button type="submit">Entrar</button>
     </form>
     </main>
 </body>
