--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css"
 </head>
 <body>
-    <main>
+    <main class="container">
     <form>
         <h1>Login IFAL</h1>
         <div class="input-box">
