--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </label>
             <a href="#">Esqueci minha senha</a>
         </div>
-        <button type="submit">Entrar</button>
+        <button type="submit" class="login">Entrar</button>
     </form>
     </main>
 </body>
