--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <main class="container">
     <form>
-        <h1>Login IFAL</h1>
+        <h1>Login<br>IFAL</h1>
         <div class="input-box">
             <input placeholder="Usuário" type="email">
             <i class="fa-solid fa-user"></i>
