--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <input type="checkbox">
             Lembre de mim
             </label>
-            <a href="#">Esqueci a senha</a>
+            <a href="#">Esqueci senha</a>
         </div>
         <button type="submit" class="login">Entrar</button>
     </form>
