--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         <div>
             <label class="remember-forgot">
             <input type="checkbox">
-            Lembre de mim
+            Lembre de mim<br>
             </label>
-            <a href="#">Esqueci senha</a>
+            <a href="#">Esqueci a senha</a>
         </div>
         <button type="submit" class="login">Entrar</button>
     </form>
