--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div>
             <label class="remember-forgot">
             <input type="checkbox">
-            Lembre de mim<br>
+            Lembre de mim                   
             </label>
             <a href="#">Esqueci a senha</a>
         </div>
